--- a/src/pages/list-detail/list-detail.scss
+++ b/src/pages/list-detail/list-detail.scss
@@ -1,7 +1,6 @@
 page-list-detail {
   .item-detail img {
-    max-width: 140px;
-    border-radius: 50%;
+    max-width: 100%;//140px;
   }
 
   .item-detail p {
