--- a/src/pages/item-create/item-create.scss
+++ b/src/pages/item-create/item-create.scss
@@ -1,3 +1,31 @@
 page-item-create {
+  .profile-image-wrapper {
+    text-align: center;
+    margin: 40px;
 
+    .profile-image {
+      width: 96px;
+      height: 96px;
+      border-radius: 50%;
+
+      display: inline-block;
+
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .profile-image-placeholder {
+      display: inline-block;
+
+      background-color: #eee;
+      width: 96px;
+      height: 96px;
+      border-radius: 50%;
+
+      ion-icon {
+        font-size: 64px;
+      }
+    }
+  }
 }
