--- a/src/pages/item-create/item-create.scss
+++ b/src/pages/item-create/item-create.scss
@@ -1,7 +1,7 @@
 page-item-create {
   .profile-image-wrapper {
     text-align: center;
-    margin: 40px;
+    margin: 20px 0;
 
     .profile-image {
       width: 96px;
@@ -23,8 +23,12 @@ page-item-create {
       height: 96px;
       border-radius: 50%;
 
+      font-size: 12px;
+
       ion-icon {
-        font-size: 64px;
+        font-size: 44px;
+        margin-bottom: -10px;
+        margin-top: 10px;
       }
     }
   }
