--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,27 +1,32 @@
 page-welcome {
-  .scroll-content {
-    $gradient-start: #327eff;
-    $gradient-end: darken($gradient-start, 20%);
-
-    background: $gradient-start;
-    background: -webkit-linear-gradient(-45deg, $gradient-start 0%, $gradient-end 100%);
-    background: linear-gradient(-45deg, $gradient-start 0%, $gradient-end 100%);
-
-    color: #fff;
+  .splash-bg {
+    position: relative;
+    background: url('/assets/img/splashbg.png') no-repeat transparent;
+    background-size: cover;
+    height: 45%;
+    z-index: 1;
   }
-
-  .content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .splash-info {
+    position: relative;
+    z-index: 2;
+    margin-top: -64px;
+    text-align: center;
   }
-
-  .cta {
+  .splash-logo {
+    margin: auto;
+    background: url('/assets/img/appicon.png') repeat transparent;
+    background-size: 100%;
+    width: 128px;
+    height: 128px;
   }
-
+  .splash-intro {
+    font-size: 18px;
+    font-weight: bold;
+    max-width: 80%;
+    margin: auto;
+  }
   button.login {
+    margin-top: 25px;
     background-color: white;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     color: #333;
