--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -5,7 +5,15 @@ page-welcome {
     background-size: cover;
     height: 45%;
     z-index: 1;
+    background-repeat: repeat-x;
+    animation: animatedBackground 40s linear infinite;
   }
+
+  @keyframes animatedBackground {
+    from { background-position: 0 0; }
+    to { background-position: 100% 0; }
+  }
+
   .splash-info {
     position: relative;
     z-index: 2;
