--- a/src/pages/item-detail/item-detail.scss
+++ b/src/pages/item-detail/item-detail.scss
@@ -2,7 +2,8 @@ page-item-detail {
   .item-profile {
     width: 100%;
     background-size: cover;
-    background-origin: center bottom;
+    -webkit-transform-origin: center bottom;
+    transform-origin: center bottom;
     height: 250px;
   }
 
