--- a/src/pages/item-detail/item-detail.scss
+++ b/src/pages/item-detail/item-detail.scss
@@ -1,9 +1,8 @@
 page-item-detail {
   .item-profile {
     width: 100%;
+    background-position: center bottom;
     background-size: cover;
-    -webkit-transform-origin: center bottom;
-    transform-origin: center bottom;
     height: 250px;
   }
 
