--- a/src/pages/item-detail/item-detail.scss
+++ b/src/pages/item-detail/item-detail.scss
@@ -1,7 +1,7 @@
 page-item-detail {
   .item-profile {
     width: 100%;
-    background-position: center bottom;
+    background-position: center center;
     background-size: cover;
     height: 250px;
   }
